--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   link: tra-gop
 - name: Tin tức
   link: blog
-- name: Liên hệ
-  link: lien-he
+- name: Yêu cầu báo giá
+  link: bao-gia
 - name: Thông tin Showroom
   link: ve-kia-yen-nghia
