--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@
   link: blog
 - name: Yêu cầu báo giá
   link: bao-gia
-- name: Thông tin Showroom
-  link: ve-kia-yen-nghia
+- name: Về Showroom
+  link: thong-tin
