change page layout

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   link: tra-gop
 - name: Tin tức
   link: blog
-- name: Yêu cầu báo giá
-  link: bao-gia
+- name: Đăng ký lái thử
+  link: lai-thu
 - name: Về Showroom
   link: thong-tin
