--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -4,8 +4,8 @@
   img: morning
 - name: OPTIMA
   img: optima
-- name: CERATO
-  img: cerato
+- name: SORENTO
+  img: sorento
 - name: SEDONA
   img: sedona
 - name: SELTOS
