--- a/_data/resent.yml
+++ b/_data/resent.yml
@@ -7,8 +7,7 @@
   link: seltos
 - name: SEDONA
   link: sedona
-- name: OPTIMA
-  link: optima
+- name: SOLUTO
+  link: soluto
 - name: MORNING
   link: morning
-
