--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: KIA YÊN NGHĨA | LIÊN HỆ 0346 084 666
+title: KIA YÊN NGHĨA | LIÊN HỆ 0901 46 83 83
 timezone: UTC
 collections:
   cerato:
@@ -29,6 +29,9 @@ collections:
   soluto:
     title: Soluto
     output: true
+  sonet:
+    title: Sonet
+    output: true
   sorento:
     title: Sorento
     output: true
@@ -42,9 +45,9 @@ defaults:
     layout: detail
 name: KIA YÊN NGHĨA
 email: duongvu8520@gmail.com
-phone: 0346 084 666
+phone: 0901468383
 description: Kia Yên Nghĩa - Phân phối xe KIA chính hãng giá tốt. Nhiều quà tặng giá
-  trị. Liên hệ ngay! HT Vay tối đa các Ngân Hàng, LS tốt nhất. HS nợ xấu. Thủ tục
+  trị. Liên hệ ngay 090 146 83 83! Hỗ trợ Vay tối đa các Ngân Hàng, LS tốt nhất. HS nợ xấu. Thủ tục
   nhanh gọn. Sẵn Xe + Đủ Màu Giao Ngay. Bảo Hành Dài Hạn. Hỗ Trợ ĐKĐK. Lái Thử Xe
   Miễn Phí. Phụ Kiện Chính Hãng.
 baseurl: ''
